--- a/app/src/main/res/layout/items.xml
+++ b/app/src/main/res/layout/items.xml
@@ -1,25 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:id="@+id/nombre"
+        android:layout_width="76dp"
+        android:layout_height="wrap_content"
+        android:text="Nombre"
 
         />
+
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:id="@+id/apellido"
-
-        />
-    <TextView
-        android:layout_width="match_parent"
+        android:layout_width="102dp"
         android:layout_height="wrap_content"
+
+
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="106dp"
+        android:text="Apellido" />
+
+    <TextView
         android:id="@+id/telefono"
+        android:layout_width="115dp"
+        android:layout_height="wrap_content"
 
-        />
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginEnd="18dp"
+        android:text="Telefono" />
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
